--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,6 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <!--
     <item
         android:id="@+id/action_settings"
@@ -11,5 +9,11 @@
         app:showAsAction="never"
         />
 -->
-
+    <item
+        android:id="@+id/menu_option_search"
+        android:title="Rechercher"
+        android:icon="@drawable/ic_done"
+        android:actionViewClass="android.widget.SearchView"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:visible="true"/>
 </menu>
