--- a/app/src/main/res/layout/include_main_activity.xml
+++ b/app/src/main/res/layout/include_main_activity.xml
@@ -14,51 +14,26 @@
         android:orientation="vertical"
         >
 
-       <!-- <android.support.v7.widget.Toolbar
+
+        <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            /> -->
+            >
 
-
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:layout_gravity="center"
-            android:background="@color/colorPrimary"
-            android:gravity="center">
-
-            <RelativeLayout
+            <EditText
+                android:id="@+id/editTextSearch"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:elevation="@dimen/fab_elevation"
+                android:visibility="gone"
+                android:background="@drawable/rect_text_edit"
+                android:singleLine="true"
+                android:hint="Recherche..." />
 
-                <org.liuyichen.dribsearch.DribSearchView
-                    android:id="@+id/dribSearchView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="18dp"
-                    android:paddingBottom="18dp"
-                    app:breadth="2"
-                    app:search_color="#fff"/>
-
-                <EditText
-                    android:id="@+id/editview"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginRight="30dp"
-                    android:visibility="gone"
-                    android:background="@null"
-                    android:singleLine="true" />
-            </RelativeLayout>
         </android.support.v7.widget.Toolbar>
-
 
         <!-- Body de l'écran -->
 
@@ -69,19 +44,20 @@
 
     </LinearLayout>
 
-<!--
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabChangeWallpaper"
+        android:id="@+id/fabSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|bottom"
+        android:layout_gravity="end|bottom"
         android:layout_margin="10dp"
+        android:src="@drawable/abc_ic_search_api_mtrl_alpha"
         app:elevation="@dimen/fab_elevation"
         app:backgroundTint="@color/blue"
         app:pressedTranslationZ="5dp"
         app:borderWidth="0dp"
         android:visibility="gone"
-        />-->
+        />
 
 </android.support.design.widget.CoordinatorLayout>
 
