--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
-    </style>
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light"/>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
@@ -16,7 +16,8 @@
 
         <item name="android:statusBarColor" tools:targetApi="21">@color/statusBarColor</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="21">true</item>
-
     </style>
+
+
 
 </resources>
